extends Control


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.



func _on_option_pressed():
	show()

func _on_retour_pressed():
	hide()

func _on_retour2_pressed():
	show()

func _on_modifie_les_touches_pressed():
	hide()

func _on_retour3_pressed():
	show()

func _on_son_pressed():
	hide()
